Added libs variable to make file

--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,6 +1,6 @@
 GCC = g++
 CFLAGS = -O0
-
+LIBS = -lm -ggdb
 SOURCES = raytrace.cpp image.cpp
 HEADERS = image.h RGB.h
 OBJECTS = $(SOURCES:.cpp=.o)
@@ -15,7 +15,7 @@ $(EXECUTABLE): $(OBJECTS)
 	$(GCC) $(CFLAGS) $(OBJECTS) $(HEADERS) -o $@
 
 .cpp.o:
-	$(GCC) $(CFLAGS) -c $< -o $@
+	$(GCC) $(CFLAGS) -c $< -o $@ $(LIBS)
 
 clean :
 	rm *.o volume
