--- a/painterly/Makefile
+++ b/painterly/Makefile
@@ -1,9 +1,9 @@
-GCC= g++
-FLAGS= -O0
-LIB= -lm -ggdb
-SOURCE= painter.cpp image.cpp
-HEADER= image.h RGB.h
-OBJECT= $(SOURCE:.cpp=.o)
+GCC = g++
+FLAGS = -O0 -Wall -Werror
+LIB = -lm -ggdb
+SOURCE = painter.cpp image.cpp
+HEADER = image.h RGB.h
+OBJECT = $(SOURCE:.cpp=.o)
 EXECUTABLE= painterly
 
 all: $(SOURCE) $(EXECUTABLE)
@@ -12,7 +12,7 @@ $(EXECUTABLE): $(OBJECT)
 	$(GCC) $(FLAGS) $(OBJECT) $(HEADER) -o $@
 
 .cpp.o:
-	$(GCC) $(CFLAGS) -c $< -o $@ $(LIBS)
+	$(GCC) $(FLAGS) -c $< -o $@ $(LIB)
 
 clean :
-	rm *.o painterly
+	rm *.o *~ painterly
