[src/CMakeLists.txt] Creating 2 static libs since image depends on rgb
[unit/CMakeLists.txt]
Globbing gtest static libs
Still can't create an executable gtest (pthreads issue)

[unit/src_vector.cc]
Added vector header file, just to see what would happen

[test_framework/CMakeLists.txt]
Need to unset pthreads option here somehow, using set(GTEST_HAS_PTHREAD 0)
  but that failed miserably

--- a/project1/src/CMakeLists.txt
+++ b/project1/src/CMakeLists.txt
@@ -1,15 +1,11 @@
 project(volume_rendering_src)
 
 # create static libs from other classes
-add_library(RGB STATIC RGB.cpp)
-add_library(Image STATIC image.cpp)
-add_library(Vector STATIC Vector.cpp)
-
-# need to link RGB symbols in Image to original lib
-target_link_libraries(Image RGB)
+add_library(image STATIC image.cpp RGB.cpp)
+add_library(vector STATIC Vector.cpp)
 
 # create executable from sources
 add_executable(volume_renderer raytrace.cpp)
 
 # need to link symbols from static libs
-target_link_libraries(volume_renderer Image Vector)
+target_link_libraries(volume_renderer image vector)
