[TEST_FRAMEWORK] Updated all CMakeLists.txt files to build properly Now everything builds in the project root directory
[PROJECT1/README.txt]
Updated with latest info to build

--- a/project1/src/CMakeLists.txt
+++ b/project1/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(volume_rendering_src)
 
 # create static libs from other classes
+set_property(GLOBAL PROPERTY 
+             PROJECT1_LIBS_GLOBAL ${CMAKE_CURRENT_BINARY_DIR})
 add_library(image STATIC image.cpp RGB.cpp)
 add_library(vector STATIC Vector.cpp)
 
