--- a/test_framework/CMakeLists.txt
+++ b/test_framework/CMakeLists.txt
@@ -14,13 +14,13 @@ message(STATUS  "Found zipped files: ${ZIP_FILES}")
 # create separate directory for gtest
 execute_process(COMMAND unzip ${ZIP_FILES}) 
 
-set(GTEST_OUTPUT "")
-
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${GTEST_ROOT})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${GTEST_ROOT})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GTEST_ROOT}) 
 
 # compile gtest
+set_property(GLOBAL PROPERTY GTEST_ROOT_GLOBAL "${CMAKE_BINARY_DIR}/${GTEST_VERSION}")
+set_property(GLOBAL PROPERTY GTEST_BUILD_GLOBAL "${CMAKE_BINARY_DIR}/${PROJECT_NAME}")
 set(GTEST_ROOT "${CMAKE_BINARY_DIR}/${GTEST_VERSION}")
 set(GTEST_ROOT_SRC "${GTEST_ROOT}/src")
 set(GTEST_ROOT_INC "${GTEST_ROOT}/include")
